Add header, bootsrap, intro paragraph, and image.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!DOCTYPE html>
+<html lan="eng-US">
+  <head>
+
+  </head>
+  <body>
+    <div class ="heading">
+      <h1>Programming Language Suggestion Quiz.</h1>
+    </div>
+      <img src="https://www.zdnet.com/a/img/resize/0a6b0be2f543ddbf313fc83a706b807b77c3c202/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=900&width=1200" class="fluid" alt="Different programming languages listed." height="250px">
+      <p>Have you decided that you want to change careers? Are you wanting to start a job in a evergrowing industry? Feeling lost about what language to learn first? Then this is the quiz for you! This quiz will help you learn what languages would best suit your learning needs going forward.
+    </p>
+
+  </body>
+</html>
