add languages.html to talk about each language/ test result.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
   <body class="bg">
     <div class = "container">
       <h1>Programming Language Suggestion Quiz:</h1>
-      <img src="https://www.zdnet.com/a/img/resize/0a6b0be2f543ddbf313fc83a706b807b77c3c202/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=900&width=1200" alt="Different programming languages listed." width="20%" class="float-l">
-      <p>
+      <h2>
       Have you decided that you want to change careers? Are you wanting to start a job in a evergrowing industry? Feeling lost about what language to learn first? Then this is the quiz for you! This quiz will help you learn what languages would best suit your learning needs going forward.
-      </p>
-    <br>
-    <br>
-    <br>
+      </h2>
     <br>
     <br>
     <form id="quiz-questions">
@@ -128,7 +124,7 @@
           </label>
           <br>
           <br>
-          <button type="submit" class="btn" id="submit-btn" color="light-gray">Submit questions for quiz results!</button>
+          <button type="submit" class="btn" id="submit-btn">Submit questions for quiz results!</button>
           <br>
       </div>
     </form>
@@ -136,6 +132,7 @@
     <br>
   <div id="quiz-results">
     <h2>Beep! Boop! Beep! Your suggested first langue to learn is <span id="results"></span>! If you want to learn more about this language, and other languages you can go to <a href="languages.html">languages.html</a>.</h2>
+  </div>
   </div>
   </body>
 </html>
