WIP hiding answer blerb from showing. Answer now showing in answer blerp, after changing JQuery to run before the JS script.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Programming Language Suggestor</title>
     <link href="cs/styles.css" rel="stylesheet" type="text/css">
     <link href="cs/bootstrap.css" rel="stylesheet" type ="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="jss/scripts.js"></script>
-    <script src="jss/jquery-3.6.0.js"></script>
+    
   </head>
   <body class="bg">
     <div class = "container">
