WIP removing Jquery per instructor request.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Programming Language Suggestor</title>
     <link href="cs/styles.css" rel="stylesheet" type="text/css">
     <link href="cs/bootstrap.css" rel="stylesheet" type ="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="jss/scripts.js"></script>
     
   </head>
@@ -30,12 +29,10 @@
             A mid-level/ mid-size company
           </label>
           <br>
-          <!--
           <label>
             <input type="radio" name="work-type" value="small-biz">
             A start-up/ small business
           </label>
-          -->
           <br>
           <br>
           <h2>How difficult of a first language would you like to learn?</h2>
@@ -50,12 +47,10 @@
             Mid-level difficulty
           </label>
           <br>
-          <!--
           <label>
             <input type="radio" name="difficulty" value="easy">
             Easiest
           </label>
-          -->
           <br>
           <br>
           <h2>How much creativity would you like to be able to utilize on the job?</h2>
@@ -70,12 +65,10 @@
             Mildly creative
           </label>
           <br>
-          <!--
           <label>
             <input type="radio" name="creativity-level" value="least">
             Least creative
           </label>
-          -->
           <br>
           <br>
           <h2>What project sizes would you like to take on?</h2>
@@ -90,13 +83,11 @@
             Making medium projects, with limited maintiance needed.
           </label>
           <br>
-          <!--
           <label>
             <input type="radio" name="project-size" value="small-proj">
             Small projects, with varying amount of maintiance needed.
           </label>
           <br>
-          -->
           <br>
           <h2>What company would excite you the most to work at?</h2>
           <br>
@@ -110,12 +101,10 @@
             Microsoft
           </label>
           <br>
-          <!--
           <label>
             <input type="radio" name="dream-job" value="twitch">
             Twitch
           </label>
-          -->
           <br>
           <br>
           <h2>What is more important to you?</h2>
@@ -130,21 +119,19 @@
             A retirement plan
           </label>
           <br>
-          <!--
           <label>
             <input type="radio" name="work-life" value="promotions">
             Ability to climb the promotional ladder quickly
           </label>
           <br>
           <br>
-          -->
           <button type="submit" class="btn" id="submit-btn">Submit questions for quiz results!</button>
           <br>
       </div>
     </form>
     <br>
     <br>
-  <div id="quiz-results">
+  <div id="quiz-results" class="hidden">
     <h2>Beep! Boop! Beep! Your suggested first langue to learn is <span id="result"></span>! If you want to learn more about this language, and other languages you can go to <a href="languages.html">languages.html</a>.</h2>
   </div>
   </div>
