add changed js to not use jquery, and made function hide properly.

--- a/index.html
+++ b/index.html
@@ -107,32 +107,20 @@
           </label>
           <br>
           <br>
-          <h2>What is more important to you?</h2>
-          <br>
-          <label>
-            <input type="radio" name="work-life" value="pto" checked>
-            Paid time Off
-          </label>
-          <br>
-          <label>
-            <input type="radio" name="work-life" value="401k">
-            A retirement plan
-          </label>
-          <br>
-          <label>
-            <input type="radio" name="work-life" value="promotions">
-            Ability to climb the promotional ladder quickly
-          </label>
-          <br>
-          <br>
           <button type="submit" class="btn" id="submit-btn">Submit questions for quiz results!</button>
           <br>
       </div>
     </form>
     <br>
     <br>
-  <div id="quiz-results" class="hidden">
-    <h2>Beep! Boop! Beep! Your suggested first langue to learn is <span id="result"></span>! If you want to learn more about this language, and other languages you can go to <a href="languages.html">languages.html</a>.</h2>
+  <div id="see-sharp" class="hidden">
+    <h2>Beep! Boop! Beep! Your suggested first langue to learn is C# (See-sharp). If you want to learn more about this language, and other languages you can go to <a href="languages.html">languages.html</a>.</h2>
+  </div>
+  <div id="ruby" class="hidden">
+    <h2>Beep! Boop! Beep! Your suggested first langue to learn is Ruby. If you want to learn more about this language, and other languages you can go to <a href="languages.html">languages.html</a>.</h2>
+  </div>
+  <div id="python" class="hidden">
+    <h2>Beep! Boop! Beep! Your suggested first langue to learn is python. If you want to learn more about this language, and other languages you can go to <a href="languages.html">languages.html</a>.</h2>
   </div>
   </div>
   </body>
