FIXED bug with fourth question.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </label>
           <br>
           <label>
-            <input type="radio" name="med-proj" value="med">
+            <input type="radio" name="project-size" value="med">
             Making medium projects, with limited maintiance needed.
           </label>
           <br>
